# src/controller/v1/account.go
@@ -14,16 +14,7 @@ var (
 	reqAccount request.Account
 )
 
-// AccountInfo 用户个人信息
-// @Summary request.WechatAccount
-// @Description 用户个人信息
-// @Tags account服务
-// @Accept application/json
-// @Produce application/json
-// @Param string query string false "string valid" minlength(5) maxlength(10)
-// @Param data body model.Account  true "微信参数"
-// @Success 200 {object} model.Account
-// @Router /api/v1/account/info [post]
+
 func AccountInfo(c *gin.Context) {
 
 	//参数校验
