# src/model/request/wechat.go
@@ -1,7 +1,0 @@
-package request
-
-type WechatAccount struct {
-	OpenID     string `json:"openid" binding:"required"`
-	NickName   string `json:"nickname" binding:"required"`
-	Mobile 	   uint   `json:"mobile" binding:"required,gte=6"`
-}
